--- a/components/react/Toast/Toast.module.css
+++ b/components/react/Toast/Toast.module.css
@@ -97,7 +97,9 @@
   background: transparent;
   border: none;
   cursor: pointer;
-  transition: background-color 150ms ease, color 150ms ease;
+  transition:
+    background-color 150ms ease,
+    color 150ms ease;
 }
 
 .close:hover {
@@ -142,4 +144,3 @@
     transform: translateX(100%);
   }
 }
-
